--- a/index.html
+++ b/index.html
@@ -174,16 +174,113 @@
     }
 
     .leaflet-popup-content {
-      margin: 10px;
-      min-width: 200px;
+      margin: 12px;
+      min-width: 220px;
+      max-width: 280px;
     }
 
     .tree-info {
       line-height: 1.6;
+      font-size: 14px;
     }
 
     .tree-info strong {
       color: #2c5f2d;
+      font-weight: 600;
+    }
+
+    .tree-info .tree-species {
+      font-size: 16px;
+      font-weight: 600;
+      color: #2c5f2d;
+      margin-bottom: 4px;
+      display: block;
+    }
+
+    .tree-info .tree-common-name {
+      font-size: 13px;
+      color: #666;
+      font-style: italic;
+      margin-bottom: 12px;
+      display: block;
+    }
+
+    .tree-info .tree-details {
+      margin: 12px 0;
+      padding-top: 12px;
+      border-top: 1px solid #e0e0e0;
+    }
+
+    .tree-info .tree-details-item {
+      margin: 6px 0;
+      font-size: 13px;
+    }
+
+    .tree-info .tree-location {
+      margin-top: 12px;
+      padding-top: 12px;
+      border-top: 1px solid #e0e0e0;
+      font-size: 12px;
+      color: #666;
+    }
+
+    .tree-info .tree-location-item {
+      margin: 4px 0;
+    }
+
+    .tree-buttons {
+      display: flex;
+      gap: 10px;
+      margin-top: 16px;
+      flex-wrap: wrap;
+    }
+
+    .street-view-button,
+    .images-button {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #4CAF50;
+      color: white !important;
+      padding: 10px 16px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-size: 13px;
+      font-weight: 700;
+      transition: all 0.2s ease;
+      flex: 1;
+      min-width: 0;
+      text-align: center;
+      box-shadow: 0 2px 4px rgba(76, 175, 80, 0.2);
+      min-height: 44px;
+      cursor: pointer;
+      border: none;
+    }
+
+    .street-view-button:hover,
+    .images-button:hover {
+      background-color: #45a049;
+      color: white !important;
+      text-decoration: none;
+      box-shadow: 0 4px 8px rgba(76, 175, 80, 0.3);
+      transform: translateY(-1px);
+    }
+
+    .street-view-button:active,
+    .images-button:active {
+      transform: translateY(0);
+      box-shadow: 0 2px 4px rgba(76, 175, 80, 0.2);
+    }
+
+    .street-view-button:visited,
+    .images-button:visited {
+      color: white !important;
+    }
+
+    .street-view-button:focus,
+    .images-button:focus {
+      outline: 2px solid #4CAF50;
+      outline-offset: 2px;
     }
 
     /* Optimize leaflet canvas rendering */
